--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
   position: fixed;
   background: #fff;
   width: 100%;
+  padding: 20px;
   top: 0;
   right: 0;
   z-index: 1000;
@@ -10,9 +11,20 @@
   justify-content: space-between;
 }
 
+#searchQuery {
+  margin-left: 50px;
+  margin-right: 50px;
+  height: 40px;
+  width: 300px;
+  padding: 10px;
+  border-radius: 1.5rem;
+  border: 2px solid black;
+}
+
 .logo {
   display: flex;
   align-items: center;
+  margin-left: 50px;
 }
 
 .logo i {
@@ -30,6 +42,7 @@
 
 #sumbit-button {
   background-color: grey;
-  border-radius: 10px;
+  border-radius: 1.5rem;
   padding: 10px;
+  width: 75px;
 }
