--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+.header {
+  margin-bottom: 100px;
+}
+
 .header .header-1 {
   position: fixed;
   background: #fff;
@@ -9,6 +13,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  
 }
 
 #searchQuery {
@@ -37,12 +42,51 @@
 }
 
 .card {
-  border: 2px solid red;
+  border: 2px solid #ccc;
+  padding: 20px;
+  margin: 10px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
 }
+
+.card h2 {
+  font-size: 1.5rem;
+  margin-bottom: 10px;
+}
+
+.card p {
+  font-size: 1rem;
+  color: #555;
+  margin-bottom: 15px;
+}
+
+.card img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+  border-radius: 5px;
+}
+
 
 #sumbit-button {
   background-color: grey;
   border-radius: 1.5rem;
   padding: 10px;
   width: 75px;
+}
+
+/* #resultDiv {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+} */
+
+#resultDiv {
+  display: grid; /* Change display property to grid */
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); /* Create a grid with columns that adjust to the available space */
+  gap: 20px; /* Add some gap between grid items */
+  justify-items: center; /* Center items horizontally within the grid */
 }
