--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
 }
 
 #searchQuery {
@@ -69,12 +69,11 @@
   border-radius: 5px;
 }
 
-
 #sumbit-button {
-  background-color: grey;
   border-radius: 1.5rem;
   padding: 10px;
-  width: 75px;
+  width: auto;
+  border: 2px solid black;
 }
 
 /* #resultDiv {
@@ -86,7 +85,14 @@
 
 #resultDiv {
   display: grid; /* Change display property to grid */
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); /* Create a grid with columns that adjust to the available space */
+  grid-template-columns: repeat(
+    auto-fill,
+    minmax(250px, 1fr)
+  ); /* Create a grid with columns that adjust to the available space */
   gap: 20px; /* Add some gap between grid items */
   justify-items: center; /* Center items horizontally within the grid */
+}
+
+.social-links a {
+  font-size: 25px;
 }
