adds functionality to card title element links to google search, removes book cursor icon image from repo

--- a/styles.css
+++ b/styles.css
@@ -51,9 +51,14 @@
   background-color: #fff;
 }
 
-.card h2 {
+.card a {
   font-size: 1.5rem;
   margin-bottom: 10px;
+  cursor: pointer;
+}
+
+.card a:hover {
+  color: red;
 }
 
 .card p {
